tests/ui/derives/derives-span-Hash-tuple-struct.stderr
error[E0277]: the trait bound `Error: Hash` is not satisfied
  --> $DIR/derives-span-Hash-tuple-struct.rs:8:5
   |
LL | #[derive(Hash)]
   |          ---- in this derive macro expansion
LL | struct Struct(
LL |     Error
   |     ^^^^^ the trait `Hash` is not implemented for `Error`
  --> $SRC_DIR/core/src/hash/mod.rs:LL:COL
   |
   = note: in this expansion of `#[derive(Hash)]`
   |
help: consider annotating `Error` with `#[derive(Hash)]`
   |
LL + #[derive(Hash)]
LL | struct Error;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
